# test_wam

Gazebo_WAM/WAM Model ROS/: CMakeLists.txt  Readme  aROSNode.py  wam.sdf
Gazebo_WAM/WAM Model ROS/plugins/: ros_track_plugin.cc  ros_wam_plugin.cc
Gazebo_WAM/track_model_ros/: CMakeLists.txt  aROSNode.py  exampleROSNode.py  model.config  track.sdf  track_world.sdf
Gazebo_WAM/track_model_ros/meshes/: oldcarriage.STL  oldtrack.STL  track.STL
Gazebo_WAM/track_model_ros/plugins/: ros_track_plugin.cc
Gazebo_WAM/wamtrack/: CMakeLists.txt  Readme  aROSNode.py  bROSNode.py  cROSNode.py  dROSNode.py  fROSNode (copy).py  fROSNode.py  gROSNode.py  hROSNode.py  iROSNode.py  jROSNode.py  model.config  sample_out_dROSNode  wam.sdf  wambocombo (copy).sdf  wamtrack.sdf  wamtrack_backup.sdf  wamtrack_edited_broke.sdf  wamtrack_edited_notrlyworking.sdf
Gazebo_WAM/wamtrack/include/: kinematix.h
Gazebo_WAM/wamtrack/meshes/: carriage.STL
Gazebo_WAM/wamtrack/plugins/: ros_wam_plugin (copy).cc  ros_wamtrack_plugin (copy, working).cc  ros_wamtrack_plugin.cc  ros_wamtrack_plugin_b4.cc  ros_wamtrack_plugin_v2_og_mostly_works.cc
Gazebo_WAM/wamtrack/src/: cROSNode.cpp  ikwam.cpp  kinematix.cpp
barrett_gazebo/: CMakeLists.txt  package.xml  setup.py
barrett_gazebo/launch/: empty_world.launch
barrett_moveit_v2/: .setup_assistant  CMakeLists.txt  package.xml
barrett_moveit_v2/config/: fake_controllers.yaml  fake_controllers_og.yaml  gaz_cntlrs.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_cntlrs.yaml  ros_controllers.yaml  ros_controllers_edited_but_no.yaml  ros_controllers_og.yaml  wam.srdf
barrett_moveit_v2/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_gazebo_og.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  wam_moveit_controller_manager.launch.xml  warehouse.launch
ros-robotic-arm/: README.md
ros-robotic-arm/robotic_arm_algorithms/: CMakeLists.txt  package.xml
ros-robotic-arm/robotic_arm_description/: package.xml
ros-robotic-arm/robotic_arm_gazebo/: package.xml
trial0/: CMakeLists.txt  README.md  package.xml
trial0/config/: test_joint_sliders.rviz  trial0.rviz  trial0_workin.rviz  waypoints.yaml
trial0/doc/: echo-display_planned_path.txt
trial0/launch/: armv2.launch  wam0.launch  wam1.launch
trial0/src/: movepy
trial0/worlds/: trial0.world  trial0_maybe.world
